--- a/chat.css
+++ b/chat.css
@@ -4,18 +4,26 @@
   box-sizing: border-box;
 }
 
+
 /* Estilo para o cabeçalho */
 header {
-  background-color: rgb(10, 6, 150);
+  background-color: #c9f9e4;
   color: #fff;
   padding: 20px;
   margin-top: 10px;
 }
 
+body {
+  background: #f8f2f2;
+  /* display: flex; */
+  /* justify-content: center; */
+
+}
+
 /* Estilo para o título */
 h1 {
   margin: 10px;
-} 
+}
 
 
 /* Estilo para o menu de navegação */
@@ -25,10 +33,11 @@ nav ul {
   padding: 10px;
   display: flex;
 }
-.container{
+
+.container {
   position: relative;
   width: 1100px;
-  display: flex ; 
+  display: flex;
   justify-content: center;
   align-items: center;
   padding: 30px;
@@ -37,36 +46,40 @@ nav ul {
 
 
 }
-.container .card{
+
+.container .card {
   position: relative;
   width: 308px;
-  height:400px;
-  background:#f0f0f0;
+  height: 400px;
+  background: #f0f0f0;
   justify-content: center;
-  display:flex;
+  display: flex;
   flex-direction: column;
   margin: 30px 10px;
   padding: 20px 15px;
-  box-shadow:0.5px 10px #e6e6e6;
-  transition:0.3s ease-in-out;
+  box-shadow: 0.5px 10px #e6e6e6;
+  transition: 0.3s ease-in-out;
   margin-top: 5%;
 }
-.container.card.imgproduto{
-position: relative;
-width: 260px;
-height: 260px;
-top: -60px;
-left:20px;
-box-shadow:0 5px 20px rgba(0, 0, 0,1, 2);
+ 
+.container.card.imgproduto {
+  position: relative;
+  width: 260px;
+  height: 260px;
+  top: -60px;
+  left: 20px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 1, 2);
 }
-.container.card.imgproduto img
-{
-max-width: 100%;
-border-radius: 10px;
+
+.container.card.imgproduto img {
+  max-width: 100%;
+  border-radius: 10px;
 }
+
 .imgproduto:hover img {
-transform:scale(1.1)
+  transform: scale(1.1)
 }
+
 .title {
   background: #884beb;
   padding: 09px;
@@ -82,14 +95,13 @@ transform:scale(1.1)
 .texto {
   margin: 30px;
 }
- 
+
 nav li {
   margin-right: 20px;
 }
 
 nav a {
-  color: #fff;
-  text-decoration: none;
+  color: #884beb text-decoration: none;
 }
 
 nav a:hover {
