--- a/chat.css
+++ b/chat.css
@@ -36,44 +36,45 @@ nav ul {
 
 .container {
   position: relative;
-  width: 1100px;
+  width: 85vw;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 30px;
   margin: 8%;
   flex-wrap: wrap;
+  
+  gap: 20px;
 
 
 }
 
 .container .card {
   position: relative;
-  width: 308px;
-  height: 400px;
-  background: #f0f0f0;
-  justify-content: center;
+  width: 25vw;
+  height: auto;
+  background: #e0d0d0;
   display: flex;
   flex-direction: column;
-  margin: 30px 10px;
+  margin: 30px 0px;
   padding: 20px 15px;
-  box-shadow: 0.5px 10px #e6e6e6;
   transition: 0.3s ease-in-out;
   margin-top: 5%;
 }
  
-.container.card.imgproduto {
+.container .card .imgproduto {
   position: relative;
-  width: 260px;
-  height: 260px;
-  top: -60px;
-  left: 20px;
+  width: 60%;
+  height: auto;
+  margin-top: -50px;
+  align-self: center;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 1, 2);
 }
 
-.container.card.imgproduto img {
+.container .card .imgproduto img {
   max-width: 100%;
   border-radius: 10px;
+  transition: transform 0.2s;
 }
 
 .imgproduto:hover img {
@@ -101,7 +102,7 @@ nav li {
 }
 
 nav a {
-  color: #884beb text-decoration: none;
+  color: #884beb; text-decoration: none;
 }
 
 nav a:hover {
